feat(user): implement get customer limit & default make customer limit when sign-up
